--- a/modulo3/pessoaapi/src/main/resources/application.properties
+++ b/modulo3/pessoaapi/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.mail.host=smtp.dbccompany.com.br
+spring.mail.port=587
+spring.mail.username=brunno.zonatto@dbccompany.com.br
+spring.mail.password=(DRd36oK
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
