--- a/modulo3/pessoaapi/src/main/resources/application.properties
+++ b/modulo3/pessoaapi/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.mail.username=brunno.zonatto@dbccompany.com.br
 spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+logging.level.com.dbc.pessoaapi=TRACE
+logging.level.project.user.UserClient=TRACE
