--- a/modulo3_2/pessoaapi/src/main/resources/application.properties
+++ b/modulo3_2/pessoaapi/src/main/resources/application.properties
@@ -7,3 +7,20 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 logging.level.com.dbc.pessoaapi=TRACE
 logging.level.project.user.UserClient=TRACE
+
+# Oracle settings
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=system
+spring.datasource.password=oracle
+spring.datasource.driver-class-oracle.jdbc.driver.OracleDriver
+spring.jpa.properties.hibernate.default_schema=VEM_SER
+
+# create and drop tables and sequences, loads import.sql
+#spring.jpa.hibernate.ddl-auto=create-drop
+# none, validate, update, create-drop
+
+# logging
+#logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
+logging.level.org.hibernate.SQL=debug
+#logging.level.org.hibernate.type.descriptor.sql=trace
+logging.level.=error
