--- a/modulo3_2/pessoaapi/src/main/resources/application.properties
+++ b/modulo3_2/pessoaapi/src/main/resources/application.properties
@@ -23,4 +23,5 @@ spring.jpa.properties.hibernate.default_schema=VEM_SER
 #logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
 logging.level.org.hibernate.SQL=debug
 #logging.level.org.hibernate.type.descriptor.sql=trace
-logging.level.=error
+logging.level.*=error
+spring.jpa.open-in-view=true
