--- a/modulo3_2/pessoaapi/src/main/resources/application.properties
+++ b/modulo3_2/pessoaapi/src/main/resources/application.properties
@@ -25,3 +25,5 @@ logging.level.org.hibernate.SQL=debug
 #logging.level.org.hibernate.type.descriptor.sql=trace
 logging.level.*=error
 spring.jpa.open-in-view=true
+
+spring.datasource.hikari.connection-init-sql=ALTER SESSION SET CURRENT_SCHEMA=vem_ser
