--- a/modulo3_3/pessoaapi/src/main/resources/application.properties
+++ b/modulo3_3/pessoaapi/src/main/resources/application.properties
@@ -27,3 +27,6 @@ logging.level.*=error
 spring.jpa.open-in-view=true
 
 spring.datasource.hikari.connection-init-sql=ALTER SESSION SET CURRENT_SCHEMA=vem_ser
+
+jwt.secret=minhaChaveSecreta
+jwt.expiration=86400000
