--- a/modulo6/chat/src/main/resources/application.properties
+++ b/modulo6/chat/src/main/resources/application.properties
@@ -2,5 +2,4 @@ kafka.bootstrap-server=chat-kafka.servebeer.com:9092
 kafka.topic.geral-chat=chat-geral
 kafka.topic.meu-chat=chat-brunno
 kafka.client-id=brunno
-kafka.group-geral-chat=chat-geral
-kafka.group-meu-chat=meu-chat
+kafka.group-id=brunno
