--- a/modulo3_3/pessoaapi/pom.xml
+++ b/modulo3_3/pessoaapi/pom.xml
@@ -120,6 +120,11 @@
 			<artifactId>jjwt</artifactId>
 			<version>0.9.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.awaitility</groupId>
+			<artifactId>awaitility</artifactId>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
