--- a/modulo3_3/pessoaapi/src/main/resources/application.properties
+++ b/modulo3_3/pessoaapi/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.mail.host=smtp.dbccompany.com.br
 spring.mail.port=587
-spring.mail.username=brunno.zonatto@dbccompany.com.br
-spring.mail.password=
+spring.mail.username=${USERMAIL}
+spring.mail.password=${SENHAMAIL}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
