ADD HOMEWORK E EXERCICIOS

--- a/modulo6_1/pessoaapi/src/main/resources/application.properties
+++ b/modulo6_1/pessoaapi/src/main/resources/application.properties
@@ -30,3 +30,6 @@ spring.datasource.hikari.connection-init-sql=ALTER SESSION SET CURRENT_SCHEMA=ve
 
 jwt.secret=minhaChaveSecreta
 jwt.expiration=86400000
+
+kafka.bootstrap-server=localhost:9092
+kafka.topic.send=envio-email
